# Ascle

./: .gitignore  MedGen.jp2  README.md  requirements.txt  requirments.txt  test.txt
Ascle/: Ascle.py  Ascle_interface.py  README.md  api_manager.py  command_processor.py  demo_MedicalAssistantInterface.py  demo_interface.py  demo_umls_qa.py  documentation.md  guide.md  guide_umls_qa.md  main_interface.py  medical_assistant.py  medical_processor.py  medical_qa.py  model_manager.py  requirements_interface.txt  umls-qa.py  umls_qa.py  umls_rerank.py
Ascle-JPBench/: Ascle-JPBench_samples.tsv  SampleRelease.tsv  SampleRelease.xlsx
EHRKit/: EHRKit.py  README.md  demo.py
MedGen/: MedGen.py  MedGen_tutorials.ipynb  README.md  demo.py  documentation.md  medical_chatbot.py
ascle-kit/: README.md  pyproject.toml
ascle-kit/core/: ascle.py
ascle-kit/models/: manager.py
ascle-kit/processors/text/: nlp_processor.py
ascle-kit/tests/unit/: test_processors.py
ascle-kit/utils/: config.py
ascle-refactor/: pyproject.toml
ascle-refactor/core/: ascle.py  base.py
ascle-refactor/processors/medical/: medspacy_processor.py
ascle-refactor/processors/text/: nlp_processor.py  summarization_processor.py  translation_processor.py
ascle-refactor/tests/unit/: test_processors.py
asclevir/: pyvenv.cfg
independent_tasks/tutorials/: README.md  (+1 more)
mimic/: 0_test.py  README.md  build_db.sql  classes.py  demo.py  mimiciii.py  tests.py
wrapper_functions/: EHRKit.py  README.md  baize_function.py  demo.py  documentation.md  medical_chatbot.py  transformer_functions.py
