[tool.poetry]
name = "ascle-kit"
version = "0.1.0"
description = "Medical text processing toolkit"
authors = ["ASCLE Lab team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
transformers = "^4.30.0"
scispacy = "0.5.2"
medspacy = "1.2.0"
spacy = ">=3.0.0,<3.8.0"
stanza = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
